--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^8.1.0",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5"
   },
@@ -34,6 +35,7 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^17.0.14",
     "@types/react-native": "^0.64.12",
+    "@types/react-native-vector-icons": "^6.4.8",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^27.0.6",
     "eslint": "^7.14.0",
